added distinct past chat display area for rep dashboard

--- a/app/chat/static/css/main.css
+++ b/app/chat/static/css/main.css
@@ -42,3 +42,5 @@
   align-self: flex-end;         /* bottom-align with bubble */
   margin-left: .4rem;
 }
+
+#pastTranscript .bubble { opacity: .85; }
