Added Roles and rep auth

--- a/app/chat/templates/partials/live_chat.html
+++ b/app/chat/templates/partials/live_chat.html
@@ -1,4 +1,5 @@
-<div id="chatbox" class="collapsed">
+<div id="chatbox" 
+	  class="fixed bottom-4 right-4 bg-white shadow-lg rounded collapsed">
   <header><span>Live Chat</span>
   <button class="toggle">▲</button></header>
   <div id="messages"></div>
