--- a/app/chat/templates/rep.html
+++ b/app/chat/templates/rep.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Rep Dashboard{% endblock %}
 
+{% block navbar %}{% endblock %}
+
 {% block content %}
 <div class="h-screen flex">
 
@@ -40,7 +42,7 @@
     <aside class="w-64 flex flex-col p-3 space-y-2 border-l" id="historyPane">
       <h2 class="font-bold mb-1">Past chats</h2>
       <ul id="historyList" class="divide-y border text-sm flex-shrink-0"></ul>
-
+    
       <div id="pastTranscript"
            class="flex-1 overflow-y-auto space-y-2 mt-2 border-t pt-2 text-sm hidden">
         <p class="text-center text-slate-500">Select a chat</p>
@@ -52,6 +54,7 @@
 {% endblock %}
 
 {% block live_chat %}{% endblock %}
+{% block footer %}{% endblock %}
 
 {% block scripts %}
 <script type="module" src="{{ url_for('chat.static', filename='js/rep_dashboard.js') }}"></script>
