--- a/app/main/templates/base.html
+++ b/app/main/templates/base.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet"
         href="{{ url_for('main.static', filename='css/site.css') }}">
 	<link rel="stylesheet"
-      href="{{ url_for('chat.static', filename='css/main.css') }}">
+      href="{{ url_for('chat.static', filename='css/chat_global.css') }}">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.6.0/dist/css/glide.core.min.css">
   <link rel="stylesheet"
