added admin dashboard as well as anti role escalation features

--- a/app/chat/templates/rep.html
+++ b/app/chat/templates/rep.html
@@ -38,6 +38,9 @@
   	
   	<h2 class="font-bold mb-1">After-hours chats</h2>
   	<ul id="afterHoursList" class="divide-y border"></ul>
+  	
+  	<h2 class="font-bold mb-1">Program applications</h2>
+		<ul id="appList" class="divide-y border text-sm"></ul>
 
   </div>
 
